# ccdproc

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CITATION.rst  CODE_OF_CONDUCT.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  ccdproc.cfg  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  setup_commands.py  setup_extensions.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci_tests.yml  publish.yml  strict_status.yml
ccdproc/: __init__.py  _astropy_init.py  _ccddata_wrapper_for_array_api.py  astrometry.py  bitmask.py  ccddata.py  ccdproc.py  combiner.py  conftest.py  core.py  image_collection.py  log_meta.py  shutter_correction.py  support_nddata_patched.py  test_gain.py  version.py
ccdproc/tests/: __init__.py  _escape_triage.py  array_escape_baseline.txt  coveragerc  make_mef.py  pytest_fixtures.py  run_for_memory_profile.py  run_profile.ipynb  run_with_file_number_limit.py  setup_package.py  test_astrometry.py  test_bitfield.py  test_bitmask.py  test_ccddata.py  test_ccddata_wrapper_for_array_api.py  test_ccdmask.py  test_ccdproc.py  test_ccdproc_logging.py  test_combine_open_files.py  test_combiner.py  test_cosmicray.py  test_escape_triage.py  test_gain.py  test_image_collection.py  test_keyword.py  test_memory_use.py  test_old.py  test_rebin.py  test_shutter_correction.py  test_supportnddata.py  test_wrapped_external_funcs.py  test_wrapped_funcs.py
ccdproc/tests/data/: README.rst  a8280271.fits  expected_ifc_file_properties.csv  flat-mef.fits  science-mef.fits
ccdproc/utils/: collections.py  sample_directory.py  slices.py
ccdproc/utils/tests/: test_slices.py
docs/: api.rst  array_api.rst  authors_for_sphinx.rst  ccddata.rst  ccdproc.rst  citation.rst  conduct.rst  conf.py  contributing.rst  default_config.rst  getting_started.rst  image_combination.rst  image_management.rst  index.rst  install.rst  license.rst  nitpick-exceptions  overview.rst  reduction_examples.rst  reduction_toolbox.rst  rtd-pip-requirements
docs/_static/: ccdproc.css
docs/ccdproc/: astrom_example.rst  bottleneck_example.rst  ccddata.rst  cosmic_ray.rst  image_combination.rst  image_management.rst  index.rst  install.rst  reduction_examples.rst  reduction_toolbox.rst
licenses/: LICENSE.rst  README.rst
tests/: a8280271.fits
