[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = ccdproc
description = Astropy affiliated package
long_description = This is a package for reducing optical/IR CCD data that relies on astropy
author = Steve Crawford and Matt Craig
author_email = ccdproc@gmail.com
license = BSD
url = http://ccdproc.readthedocs.io/
edit_on_github = False
github_project = astropy/ccdproc

[entry_points]
